--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "bootstrap": "^5.3.3",
+    "dompurify": "^3.2.3",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.1.0",
+    "framer-motion": "^11.18.0",
+    "lucide-react": "^0.471.1",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
